--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=0.89.0
-numpy>=1.19.5
-tensorflow>=2.4.0
-scikit-learn>=0.24.1
+streamlit==1.36.0
+numpy==1.26.4
+tensorflow==2.16.2
+scikit-learn==0.24.2
 pillow>=8.1.0
 opencv-python-headless>=4.5.1.48
 
